--- a/templates/tricks/new.html.twig
+++ b/templates/tricks/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle figure{% endblock %}
 
 {% block body %}
-    <h1 style="text-align:center;">Création d'une figure</h1>
+    <h1 style="text-align:center; margin-top:80px;">Création d'une figure</h1>
 
     {{ include('tricks/_form.html.twig') }}
 
