--- a/templates/tricks/_delete_form.html.twig
+++ b/templates/tricks/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('app_tricks_delete', {'id': trick.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_tricks_delete', {'id': trick.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce trick ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ trick.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">
+        <i class="fas fa-trash-alt"></i>
+    </button>
 </form>
