--- a/templates/tricks/_tricks.html.twig
+++ b/templates/tricks/_tricks.html.twig
@@ -1,21 +1,22 @@
-<div id="tricks-container" class="row" style="margin-top:20px;">
-    {% for trick in tricks %}
-        <div class="col-md-3 col-sm-4">
-            <div class="card mb-4">
-                {% if trick.pictures is not empty %}
-                    <img src="{{ asset('uploads/pictures/' ~ trick.pictures|first) }}" alt="Picture" class="card-img-top">
-                {% endif %}
+{% for trick in tricks %}
+    <div class="col-md-3 col-sm-4">
+        <div class="card mb-4 custom-card-size">
+            {% if trick.pictures is not empty %}
+                <img src="{{ asset('/build/pictures/tricks/' ~ trick.pictures|first) }}" alt="Picture" class="card-img-top custom-picture-size">
+            {% endif %}
                 <div class="card-body">
-                    <h5 class="card-title">{{ trick.name }}</h5>
-                    <p class="card-text">Created at: {{ trick.createAt ? trick.createAt|date('Y-m-d H:i:s') : '' }}</p>
-                    <p class="card-text">Updated at: {{ trick.updateAt ? trick.updateAt|date('Y-m-d H:i:s') : '' }}</p>
-                    <a href="{{ path('app_tricks_show', {'id': trick.id}) }}" class="btn btn-primary"><i class="fas fa-eye"></i></a>
-                    <a href="{{ path('app_tricks_edit', {'id': trick.id}) }}" class="btn btn-secondary"><i class="fas fa-pencil-alt"></i></a>
-                    {% if app.user is not null %}
-                        <a href="{{ path('app_tricks_delete', {'id': trick.id}) }}" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce trick ?')"><i class="fas fa-trash-alt"></i></a>
-                    {% endif %}
+                    <a href="{{ path('app_tricks_show', {'id': trick.id}) }}" class="btn btn-outline-info btn-sm">
+                        <h5 class="card-title">{{ trick.name }}</h5>
+                    </a>
+                    <div class="group-button d-flex justify-content-end">
+                        {% if app.user is not null %}
+                            <a href="{{ path('app_tricks_edit', {'id': trick.id}) }}" class="btn btn-secondary"><i class="fas fa-pencil-alt"></i></a>
+                            {% if app.user == trick.user %}
+                            {{ include ('tricks/_delete_form.html.twig', {'id': trick.id}) }}
+                            {% endif %}
+                        {% endif %}
+                    </div>      
                 </div>
-            </div>
         </div>
-    {% endfor %}
-</div>
+    </div>
+{% endfor %}
