--- a/templates/tricks/show.html.twig
+++ b/templates/tricks/show.html.twig
@@ -3,129 +3,307 @@
 {% block title %}Tricks{% endblock %}
 
 {% block body %}
-    <div class="container d-flex align-items-center justify-content-center vh-80" style="margin-top: 50px;">
-        <div class="card mb-3">
-            <div class="card-body">
-                <div class="d-flex justify-content-end">
-                    <div class="btn-group">
-                        <a href="{{ path('app_tricks_edit', {'id': trick.id}) }}" class="btn btn-secondary"><i class="fas fa-pencil-alt"></i></a>
-                        {% if app.user is not null %}
-                        <a href="{{ path('app_tricks_delete', {'id': trick.id}) }}" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce trick ?')">
-                        <i class="fas fa-trash-alt"></i>
-                        </a>
-                        {% endif %}
-                    </div>
+
+<div class="container d-flex align-items-center justify-content-center vh-80" style="margin-top: 100px!important;">
+    <div class="card mb-3">
+        <div class="card-body">
+            <div class="d-flex justify-content-end">
+                <div class="btn-group d-inline-flex">
+                    {% if app.user is not null %}
+                    <a href="{{ path('app_tricks_edit', {'id': trick.id}) }}" class="btn btn-secondary"><i class="fas fa-pencil-alt"></i></a>
+                    {% if app.user == trick.user %}
+                    {% include 'tricks/_delete_form.html.twig' with {'trick': trick} %}
+                    {% endif %}
+                    {% endif %}
                 </div>
+            </div>
             <h1>{{ trick.name }}</h1>
             {% if trick.pictures is not empty %}
             <div class="row">
                 <div class="col-md-12">
-                    <img src="{{ asset('/uploads/pictures/' ~ trick.pictures|first) }}" class="img-fluid" alt="Picture" style="max-height: 400px; object-fit: cover;">
+                    <img src="{{ asset('build/pictures/tricks/' ~ trick.pictures|first) }}" class="img-fluid" alt="Picture" style="max-height: 500px; width:100%; object-fit: cover;">
                 </div>
             </div>
+            <br>
             {% endif %}
-            {% if trick.pictures|length > 1 %}
-            <div class="row mt-3">
-                {% for picture in trick.pictures|slice(1) %}
-                <div class="col-md-2">
-                    <img src="{{ asset('/uploads/pictures/' ~ picture) }}" class="img-fluid" alt="Picture" style="max-height: 200px; object-fit: cover;">
+            {% if trick.pictures|length > 1 or trick.videos is not empty %}
+
+        <button id="toggle-media-button" class="btn btn-primary d-md-none">Afficher les médias</button>
+
+    <div class="row mt-3">
+        {% if trick.pictures|length > 1 %}
+            {% if trick.pictures|length > 3 %}
+                <div class="col-md-6">
+                    <div id="imageCarousel" class="carousel slide media-container" data-ride="carousel">
+                        <div class="carousel-inner">
+                            {% set active = true %}
+                            {% for picture in trick.pictures|slice(1) %}
+                                {% if active %}
+                                    <div class="carousel-item active">
+                                {% else %}
+                                    <div class="carousel-item">
+                                {% endif %}
+                                    <img src="{{ asset('build/pictures/tricks/' ~ picture) }}" class="img-fluid" alt="Picture" style="max-height: 350px; width:100%; object-fit: cover;">
+                                </div>
+                                {% set active = false %}
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                {% endfor %}
-            </div>
-            {% endif %}
-            {% if trick.videos is not empty %}
-            <div class="row mt-3">
-                {% for video in trick.videos %}
-                <div class="col-md-3">
-                    <iframe width="100%" height="200" src="{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                {% endfor %}
-            </div>
-            {% endif %}
-            <p>{{ trick.description }}</p>
-            <p>Crée le : {{ trick.createAt ? trick.createAt|date('Y-m-d H:i:s') : '' }}</p>
-            <p>Mis a jour le : {{ trick.updateAt ? trick.updateAt|date('Y-m-d H:i:s') : '' }}</p>
-            <p>Catégorie : {{ trick.category }}</p>
-
-            <a href="{{ path('app_tricks_index') }}">Retour à la liste des figures</a>
-
-            {{ include('tricks/_delete_form.html.twig') }}
-            {% if app.user is not null %}
-            <a href="{{ path('app_comment_new', {'id': trick.id}) }}">Ajouter un commentaire</a>
             {% else %}
-            <p>Vous devez créer un compte / vous connecter pour déposer un commentaire.</p>
+                <div class="col-md-6">
+                    <div class="row">
+                        {% for picture in trick.pictures|slice(1) %}
+                            <div class="col-md-6 media-container">
+                                <img src="{{ asset('build/pictures/tricks/' ~ picture) }}" class="img-fluid" alt="Picture" style="max-height: 200px; width:100%; object-fit: cover;">
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
             {% endif %}
+        {% endif %}
+
+        {% if trick.videos is not empty %}
+            {% if trick.videos|length >= 3 %}
+                <div class="col-md-6">
+                    <div id="videoCarousel" class="carousel slide media-container" data-ride="carousel">
+                        <div class="carousel-inner">
+                            {% set active = true %}
+                            {% for video in trick.videos %}
+                                {% if active %}
+                                    <div class="carousel-item active">
+                                {% else %}
+                                    <div class="carousel-item">
+                                {% endif %}
+                                    <div class="video-container">
+                                        <iframe width="100%" height="350" src="{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                {% set active = false %}
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#videoCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#videoCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            {% else %}
+                <div class="col-md-6">
+                    <div class="row">
+                        {% for video in trick.videos %}
+                            <div class="col-md-6 media-container">
+                                <div class="video-container">
+                                    <iframe width="100%" height="200" src="{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
+        {% endif %}
+    </div>
+{% endif %}
+<br>
+            <p>{{ trick.description }}</p>
+            <div class="row">
+                <div class="col-md">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h6 class="card-subtitle mb-2 text-muted">Crée le :</h6>
+                            <p class="card-text">{{ trick.createAt ? trick.createAt|date('d-m-Y H:i:s') : '' }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h6 class="card-subtitle mb-2 text-muted">Mis à jour le :</h6>
+                            <p class="card-text">{{ trick.updateAt ? trick.updateAt|date('d-m-Y H:i:s') : '' }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h6 class="card-subtitle mb-2 text-muted">Catégorie :</h6>
+                            <p class="card-text">{{ trick.category }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h6 class="card-subtitle mb-2 text-muted">Auteur :</h6>
+                            <p class="card-text">{{ trick.user ? trick.user : '' }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+
+            <div class="separator"></div>
+
+            <div class="card-body">
+            {% if app.user is not null %}
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                <button type="submit" class="btn btn-primary" style="margin-top:10px;">Ajouter un commentaire</button>
+                {{ form_end(form) }}
+            {% else %}
+                <p>Vous devez créer un compte / vous connecter pour déposer un commentaire.</p>
+            {% endif %}
+        </div>
+
+        <div class="separator"></div>
+
+    
+    <section class="flex flex-col gap-4 px-6 py-4">
+    {% set commentsToShow = trick.comments|reverse|slice(0, 5) %}
+        {% for comment in commentsToShow %}
+        <article class="px-6 py-4">
+            {% if comment.user %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="media">
+                            <img class="mr-4 rounded-circle" alt="User Profile Picture" src="{{ asset('build/pictures/profiles/' ~ comment.user.profilePicture) }}" style="width:70px;">
+                            <div class="media-body">
+                                <div class="row">
+                                    <div class="col-8 d-flex">
+                                        <p><b>{{ comment.user.username }} </b></p>
+                                        <span> - {{ comment.createAt ? comment.createAt|date('d-m-Y H:i:s') : '' }}</span>
+                                    </div>
+                                </div>
+                                <p>{{ comment.content }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        </article>
+        <hr>
+    {% endfor %}
+    </section>
+ 
+    {% if trick.comments|length >= 5 %}
+    <button id="load-more-comments" data-trick-id="{{ trick.id }}" class="btn btn-primary" data-offset="5">Voir plus de commentaires</button>
+    <br><br>
+    {% endif %}
+
         </div>
     </div>
 </div>
 
-
-{# Comments #}
-<section class="flex flex-col gap-4 px-6 py-4">
-    {% set commentsToShow = trick.comments|slice(0, 5) %}
-    {% for comment in commentsToShow %}
-        <article class="rounded bg-white shadow px-6 py-4">
-            {% if comment.user %}
-                <p>{{ comment.content }}</p>
-                <p class="text-sm text-gray-600 italic">{{ comment.user.username }}</p>
-                <img src="{{ comment.user.profilePicture }}">
-            {% endif %}
-        </article>
-    {% endfor %} 
-</section>
-
-{% if trick.comments|length >= 5 %}
-    <button id="load-more-comments" data-trick-id="{{ trick.id }}" data-offset="5">Voir plus de commentaires</button>
-{% endif %}
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
 <script>
+
     $(document).ready(function() {
+
+        // Gérer le clic sur le bouton de basculement
+        $('#toggle-media-button').click(function() {
+            $('.media-container').toggle();
+        });
+
         $('#load-more-comments').click(function() {
-            var trickId = $(this).data('trick-id');
-            var offset = $(this).data('offset');
-            var url = '/comment/load/' + trickId + '?offset=' + offset;
+        var trickId = $(this).data('trick-id');
+        var offset = $(this).data('offset');
+        var url = '/comment/load/' + trickId + '?offset=' + offset;
 
-            // Effectuez une requête Ajax pour charger les commentaires supplémentaires
-            $.ajax({
-                url: url,
-                method: 'GET',
-                dataType: 'json',
-                success: function(response) {
-                    var comments = response;
+        // Requête Ajax pour charger les commentaires
+        $.ajax({
+            url: url,
+            method: 'GET',
+            dataType: 'json',
+            success: function(response) {
+                var comments = response;
 
-                    // Ajoutez les commentaires à la section des commentaires
-                    var commentsSection = $('.flex.flex-col.gap-4.px-6.py-4');
-                    $.each(comments, function(index, comment) {
-                        var article = $('<article>').addClass('rounded bg-white shadow px-6 py-4').html(`
-                            <p>${comment.content}</p>
-                            <p class="text-sm text-gray-600 italic">${comment.user}</p>
-                        `);
+                // Ajoute les commentaires à la section des commentaires
+                var commentsSection = $('.flex.flex-col.gap-4.px-6.py-4');
+                $.each(comments, function(index, comment) {
+                    var article = $('<article>').addClass('px-6 py-4');
+                        if (comment.user) {
+                            var mediaDiv = $('<div>').addClass('media');
+                            var profilePicture = $('<img>').addClass('mr-4 rounded-circle').attr('alt', 'User Profile Picture').attr('src', 'build/pictures/profiles/' + comment.profilePicture).attr('style', 'width:70px;');
+                            var mediaBodyDiv = $('<div>').addClass('media-body');
+                            var rowDiv = $('<div>').addClass('row');
+                            var colDiv = $('<div>').addClass('col-8 d-flex');
+                            var username = $('<p>').html('<b>' + comment.user + '</b>');
+                            var createdAt = $('<span>').text(' - ' + (comment.createAt ? comment.createAt : ''));
+                            var commentContent = $('<p>').text(comment.content);
 
-                        // Vérifie si l'image de profil de l'utilisateur est disponible
-                        if (comment.user.profilePicture) {
-                            var profilePicture = $('<img>').attr('src', comment.user.profilePicture);
-                            article.find('.comment-username').after(profilePicture);
+                            colDiv.append(username, createdAt);
+                            rowDiv.append(colDiv);
+                            mediaBodyDiv.append(rowDiv, commentContent);
+                            mediaDiv.append(profilePicture, mediaBodyDiv);
+                            article.append(mediaDiv);
+                        } else {
+                            article.append(comment.content);
                         }
 
-                        commentsSection.append(article);
-                    });
-
-                    // Mettez à jour la valeur de l'attribut data-offset pour le bouton de chargement des commentaires
-                    offset += 5;
-                    $('#load-more-comments').data('offset', offset);
-
-                    // Vérifiez si d'autres commentaires sont disponibles
-                    if (comments.length < 5) {
-                        $('#load-more-comments').hide();
-                    }
-                },
-                error: function(error) {
-                    console.error(error);
-                }
+                    commentsSection.append(article);
+                    commentsSection.append('<hr>');
             });
+
+                // Met à jour la valeur de l'attribut data-offset pour le bouton de chargement des commentaires
+                offset += 5;
+                $('#load-more-comments').data('offset', offset);
+
+                // Vérifie si d'autres commentaires sont disponibles, sinon on cache le bouton
+                if (comments.length < 5) {
+                    $('#load-more-comments').hide();
+                }
+            },
+            error: function(error) {
+                console.error(error);
+            }
         });
+        });
+
+        //Permet d'afficher les images avec la taille réelle
+        $('img').click(function() {
+            var imageUrl = $(this).attr('src');
+            showOriginalImage(imageUrl);
+        });
+        //Génère un modal au clic sur l'image
+        function showOriginalImage(imageUrl) {
+            var imageElement = $('<img>').attr('src', imageUrl).css({
+                'max-width': '100%',
+                'max-height': '100%'
+            });
+
+            var modal = $('<div>').css({
+                'position': 'fixed',
+                'top': '0',
+                'left': '0',
+                'width': '100%',
+                'height': '100%',
+                'background-color': 'rgba(0, 0, 0, 0.8)',
+                'display': 'flex',
+                'justify-content': 'center',
+                'align-items': 'center'
+            }).append(imageElement);
+
+            modal.click(function() {
+                modal.remove();
+            });
+
+            $('body').append(modal);
+        }
+
     });
 </script>
+
 {% endblock %}
