--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Rénitialiser votre mot de passe{% endblock %}
+{% block title %}Réinitialiser votre mot de passe{% endblock %}
 
 {% block body %}
-    <br><br><br><br>
-    <h1>Rénitialiser votre mot de passe</h1>
-
-    {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Rénitialiser mot de passe</button>
-    {{ form_end(resetForm) }}
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <h1 class="h3 mb-3 font-weight-normal text-center">Réinitialiser votre mot de passe</h1>
+            {{ form_start(resetForm) }}
+            <div class="form-group">
+                {{ form_row(resetForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="text-center">
+                <button class="btn btn-primary" type="submit">Réinitialiser mot de passe</button>
+            </div>
+            {{ form_end(resetForm) }}
+        </div>
+    </div>
+</div>
 {% endblock %}
