--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -48,7 +48,7 @@
                   <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
               </div>
               <div class="text-center">
-                <p>Pas enregistré ? <a href="#!">Créer un compte</a></p>
+                <p>Pas enregistré ? <a href="{{ path('app_register') }}">Créer un compte</a></p>
             </div>
         </div>
     </div>
