--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -7,12 +7,8 @@
                     </div>
                     <br>
                 </div>
-            </div><!--End off row-->
+            </div><!--End row-->
             <a href="#tricks">
                 <i class="fas fa-chevron-down fa-4x chevron-down"></i>
             </a>
-        <!--End off container -->
-</section> <!--End off Home Sections-->
-
-
-
+</section> <!--End Home Sections-->
