Update home templates

--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -3,12 +3,12 @@
             <div class="row">
                 <div class="main_home">
                     <div class="home_bg">
-                        <img src="/img/snow.jpeg">
+                        <img src="{{ asset('build/pictures/home.jpeg') }}">
                     </div>
                     <br>
                 </div>
             </div><!--End row-->
-            <a href="#tricks">
+            <a href="#tricks-container">
                 <i class="fas fa-chevron-down fa-4x chevron-down"></i>
             </a>
 </section> <!--End Home Sections-->
