--- a/templates/home/tricks.html.twig
+++ b/templates/home/tricks.html.twig
@@ -35,8 +35,8 @@
 <div id="load-more-container" class="text-center" style="margin-top: 20px;">
   <button id="load-more-tricks" class="btn btn-primary" style="margin-bottom:10px;">Charger plus</button>
   <div id="scroll-top-container" class="scroll-top-container">
-    <a href="#tricks" class="scroll-top">
-      <i class="fas fa-chevron-up fa-4x chevron-up"></i>
+    <a href="#tricks-container" class="scroll-top">
+      <i class="fas fa-chevron-up fa-4x chevron-up custom-arrow"></i>
     </a>
   </div>  
 </div>
@@ -69,6 +69,10 @@
                     tricksContainer.append(response);
 
                     loadedTricks += tricksPerPage;
+
+                    if (loadedTricks > 10) {
+                      $('.scroll-top').css('visibility', 'visible'); // Affiche la flèche
+                    }
 
                     if (remainingTricks <= tricksPerPage) {
                         loadMoreBtn.hide();
