--- a/templates/tricks/_form.html.twig
+++ b/templates/tricks/_form.html.twig
@@ -3,13 +3,15 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
             <div class="form-group">
-                {{ form_label(form.name, 'Nom') }}
+                {{ form_label(form.name, 'Nom*') }}
                 {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.name) }}
             </div>
             <br>
             <div class="form-group">
-                {{ form_label(form.description, 'Description') }}
+                {{ form_label(form.description, 'Description*') }}
                 {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                <span class="error-message">{{ form_errors(form.description) }}</span>
             </div>
             <br>
             <div class="form-group">
@@ -28,17 +30,19 @@
             {% endif %}
             <br>
             <div class="form-group">
-                {{ form_label(form.videos, 'Videos') }}
+                {{ form_label(form.videos, 'Vidéos') }}
                 {{ form_widget(form.videos, {'attr': {'class': 'form-control'}}) }}
+                <span class="help-message">{{ form_help(form.videos) }}</span>
             </div>
             <br>
             <div class="form-group">
-                {{ form_label(form.category, 'Catégorie') }}
+                {{ form_label(form.category, 'Catégorie*') }}
                 {{ form_widget(form.category, {'attr': {'class': 'form-control'}}) }}
             </div>
             <br>
             {{ form_widget(form._token) }}
-            <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
+            <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button><br>
+            <span class="help-message">* Champs obligatoires pour la validation</span>
         </div>
     </div>
 </div>
