--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="main_home">
                     <div class="home_bg">
-                        <img src="{{ asset('build/pictures/home.jpeg') }}">
+                        <img src="{{ asset('build/pictures/home/home.jpeg') }}">
                     </div>
                     <br>
                 </div>
