Redesign edit page

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -97,6 +97,11 @@
 
 }
 
+.form-edit-center{
+    width:80%;
+    margin:auto;
+}
+
 @media (max-width: 768px) {
     .media-container {
         display: none;
